--- a/styles/prism-gruvbox.scss
+++ b/styles/prism-gruvbox.scss
@@ -10,9 +10,18 @@
 /*********************************************************
 * General
 */
+$black: #282828;
+$white: #ebdbb2;
+$gray: #928374;
+$red: #fb4934;
+$green: #b8bb26;
+$blue: #83a598;
+$yellow: #fabd2f;
+$orange: #fe8019;
+
 pre[class*="language-"],
 code[class*="language-"] {
-  color: #ebdbb2;
+  color: $white;
   font-size: 13px;
   text-shadow: none;
   font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
@@ -35,7 +44,7 @@ code[class*="language-"]::selection,
 pre[class*="language-"]::mozselection,
 code[class*="language-"]::mozselection {
   text-shadow: none;
-  background: #fabd2f;
+  background: $yellow;
 }
 @media print {
   pre[class*="language-"],
@@ -47,7 +56,7 @@ pre[class*="language-"] {
   padding: 1em;
   margin: .5em 0;
   overflow: auto;
-  background: #282828;
+  background: $black;
 }
 :not(pre) > code[class*="language-"] {
   padding: .1em .3em;
@@ -63,10 +72,10 @@ pre[class*="language-"] {
 .token.doctype,
 .token.cdata,
 .token.coord {
-  color: #928374;
+  color: $gray;
 }
 .token.punctuation {
-  color: #928374;
+  color: $gray;
 }
 .token.property,
 .token.tag,
@@ -74,14 +83,14 @@ pre[class*="language-"] {
 .token.number,
 .token.constant,
 .token.symbol {
-  color: #b8bb26;
+  color: $green;
 }
 .token.selector,
 .token.attr-name,
 .token.string,
 .token.char,
 .token.builtin {
-  color: #83a598;
+  color: $blue;
 }
 .token.operator,
 .token.entity,
@@ -89,24 +98,24 @@ pre[class*="language-"] {
 .language-css .token.string,
 .style .token.string {
   color: #bdae93;
-  background: #282828;
+  background: $black;
 }
 .token.atrule,
 .token.attr-value,
 .token.keyword,
 .token.deleted {
-  color: #fb4934;
+  color: $red;
 }
 
 .token.class-name {
-  color: #fabd2f;
+  color: $yellow;
 }
 .token.regex,
 .token.important,
 .token.function,
 .token.variable,
 .token.inserted {
-  color: #b8bb26;
+  color: $green;
 }
 .token.important,
 .token.bold {
@@ -142,7 +151,7 @@ pre[data-file] {
 pre[data-file]:before {
   content: attr(data-file);
   position: absolute;
-  color: #928374;
+  color: $gray;
   top: 4px;
   right: 4px;
 }
@@ -154,9 +163,50 @@ pre[data-file]:before {
   padding: inherit 0;
   margin-top: 1em;
   background: #665c54;
-  box-shadow: inset 5px 0 0 #fe8019;
+  box-shadow: inset 5px 0 0 $orange;
   z-index: 0;
   pointer-events: none;
   line-height: inherit;
   white-space: pre;
+}
+
+pre[class*="language-"].line-numbers {
+	position: relative;
+	padding-left: 3.8em;
+	counter-reset: linenumber;
+}
+
+pre[class*="language-"].line-numbers > code {
+	position: relative;
+	white-space: inherit;
+}
+
+.line-numbers .line-numbers-rows {
+  position: absolute;
+  pointer-events: none;
+  top: 0;
+  font-size: 100%;
+  left: -3.8em;
+  width: 3em; /* works for line-numbers below 1000 lines */
+  letter-spacing: -1px;
+  border-right: 1px solid $gray;
+
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
+}
+
+.line-numbers-rows > span {
+  display: block;
+  counter-increment: linenumber;
+}
+
+.line-numbers-rows > span:before {
+  content: counter(linenumber);
+  color: $gray;
+  display: block;
+  padding-right: 0.8em;
+  text-align: right;
 }
