add style for image

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -36,6 +36,11 @@ ul li {
   list-style-type: none;
 }
 
+img {
+  width: 100%;
+  max-width: 100%;
+}
+
 blockquote {
   position: relative;
   margin: 0.1rem 0;
