--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -11,12 +11,24 @@ body {
   padding: 0;
   font-size: 1rem;
   line-height: 1.5rem;
-  font-family: $plex-mono, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family:
+    $plex-mono,
+    -apple-system,
+    BlinkMacSystemFont,
+    Segoe UI,
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    Fira Sans,
+    Droid Sans,
+    Helvetica Neue,
+    sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
-  html,body {
+  html,
+  body {
     background: $bg;
     color: $white;
   }
@@ -67,6 +79,7 @@ blockquote {
 @for $i from 1 through 6 {
   h#{$i} > a:hover {
     text-decoration: underline;
+
     &::before {
       text-decoration: underline;
     }
@@ -87,7 +100,9 @@ table {
   thead {
     background-color: $mocha;
   }
-  th, td {
+
+  th,
+  td {
     padding: 0.25rem 1rem;
   }
 }
