--- a/src/styles/prism-gruvbox.scss
+++ b/src/styles/prism-gruvbox.scss
@@ -43,17 +43,18 @@ code[class*="language-"]::selection {
 
 pre[class*="language-"] {
   padding: 1em;
-  margin: .5em 0;
+  margin: 0.5em 0;
   overflow: auto;
   background: $black;
 }
 
 :not(pre) > code[class*="language-"] {
-  padding: .1em .3em;
-  border-radius: .3em;
+  padding: 0.1em 0.3em;
+  border-radius: 0.3em;
   color: #fbf1c7;
   background: #a89984;
 }
+
 /*********************************************************
  * Tokens
  */
@@ -85,6 +86,7 @@ pre[class*="language-"] {
 .token.builtin {
   color: $blue;
 }
+
 .token.operator,
 .token.entity,
 .token.url,
@@ -92,6 +94,7 @@ pre[class*="language-"] {
 .style .token.string {
   color: $fg2;
 }
+
 .token.atrule,
 .token.attr-value,
 .token.keyword,
@@ -103,6 +106,7 @@ pre[class*="language-"] {
 .token.constant {
   color: $yellow;
 }
+
 .token.regex,
 .token.important,
 .token.function,
@@ -119,9 +123,11 @@ pre[class*="language-"] {
 .token.bold {
   font-weight: bold;
 }
+
 .token.italic {
   font-style: italic;
 }
+
 .token.entity {
   cursor: help;
 }
@@ -137,12 +143,10 @@ pre.language-git {
   }
 }
 
-/*********************************************************
- * Line highlighting
- */
 pre[data-line] {
   position: relative;
 }
+
 pre[class*="language-"] > code[class*="language-"] {
   position: relative;
   z-index: 1;
@@ -195,7 +199,6 @@ pre[class*="language-"].line-numbers > code {
   letter-spacing: -1px;
   border-right: 1px solid $gray;
   user-select: none;
-
 }
 
 .line-numbers-rows > span {
@@ -203,7 +206,7 @@ pre[class*="language-"].line-numbers > code {
   counter-increment: linenumber;
 }
 
-.line-numbers-rows > span:before {
+.line-numbers-rows > span::before {
   content: counter(linenumber);
   color: $bg2;
   display: block;
