--- a/src/pages/posts/slug.module.scss
+++ b/src/pages/posts/slug.module.scss
@@ -26,6 +26,18 @@
   color: $black;
   background-color: $beige;
   padding: 40px;
+
+  a {
+    text-decoration: underline;
+
+    &:hover {
+      color: $orange;
+    }
+  }
+
+  hr {
+    margin: 20px 0;
+  }
 }
 
 .commit_logs {
@@ -35,6 +47,42 @@
   background-color: $gray;
   margin-top: 40px;
   padding: 40px;
+
+  summary {
+    position: relative;
+    padding: 4px 0;
+    list-style: none;
+    cursor: pointer;
+
+    &::after {
+      content: '+';
+      opacity: 0;
+      position: absolute;
+      top: 45%;
+      right: 30px;
+      transform: translateY(-50%);
+      transition: opacity 0.2s, transform 0.5s;
+      font-size: 24px;
+    }
+
+    &:hover::after {
+      opacity: 1;
+    }
+
+    &::-webkit-details-marker {
+      display: none;
+    }
+  }
+
+  details[open] > summary::after {
+    transform: translateY(-50%) rotate(45deg);
+  }
+
+  summary:hover,
+  details[open] summary {
+    background-color: $mos;
+    color: $white;
+  }
 }
 
 @media (max-width: 1200px) {
