--- a/src/styles/prism-gruvbox.scss
+++ b/src/styles/prism-gruvbox.scss
@@ -152,6 +152,18 @@ pre[class*="language-"] > code[class*="language-"] {
   z-index: 1;
 }
 
+pre[class*="language-diff-"] .inserted-sign.inserted {
+  width: 100%;
+  display: block;
+  background-color: rgba(0, 255, 128, 0.1);
+}
+
+pre[class*="language-diff-"] .deleted-sign.deleted {
+  width: 100%;
+  display: block;
+  background-color: rgba(255, 0, 0, 0.1);
+}
+
 pre[data-file] {
   position: relative;
 }
