--- a/src/pages/archives/slug.module.scss
+++ b/src/pages/archives/slug.module.scss
@@ -50,7 +50,7 @@
 
   summary {
     position: relative;
-    padding: 4px 0;
+    padding: 4px 12px;
     list-style: none;
     cursor: pointer;
 
