--- a/src/styles/prism-gruvbox.scss
+++ b/src/styles/prism-gruvbox.scss
@@ -154,13 +154,13 @@ pre[class*="language-"] > code[class*="language-"] {
 
 pre[class*="language-diff-"] .inserted-sign.inserted {
   width: 100%;
-  display: block;
+  display: table;
   background-color: rgba(0, 255, 128, 0.1);
 }
 
 pre[class*="language-diff-"] .deleted-sign.deleted {
   width: 100%;
-  display: block;
+  display: table;
   background-color: rgba(255, 0, 0, 0.1);
 }
 
