tweak css naming

--- a/src/pages/archives/index.module.scss
+++ b/src/pages/archives/index.module.scss
@@ -9,7 +9,7 @@
   justify-content: space-between;
 }
 
-.page_title {
+.title {
   color: $mos;
 }
 
@@ -25,7 +25,7 @@
     align-items: flex-start;
   }
 
-  .page_title {
+  .title {
     margin-left: 20px;
   }
 
