--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -2,7 +2,7 @@
 @import "../styles/color.scss";
 @import "../styles/mixin.scss";
 
-.navigation {
+.navigation__container {
   @include centering($max-width);
 
   display: flex;
@@ -18,12 +18,12 @@
   }
 }
 
-.navigation__inner {
+.navigation {
   @include centering($max-width);
 }
 
 @media (max-width: 980px) {
-  .navigation {
+  .navigation__container {
     font-size: 1.3em;
     padding: 10px 20px;
     margin-bottom: 0;
