--- a/src/components/archives/CommitLogs.module.scss
+++ b/src/components/archives/CommitLogs.module.scss
@@ -8,7 +8,7 @@
   color: $black;
   background-color: $gray;
   margin-top: 40px;
-  padding: 40px;
+  padding: 10px 20px;
 
   summary {
     display: grid;
