--- a/src/pages/archives/slug.module.scss
+++ b/src/pages/archives/slug.module.scss
@@ -3,6 +3,7 @@
 @import "../../styles/mixin.scss";
 
 .container {
+  margin-top: 40px;
   width: 100%;
   display: grid;
   grid-template-columns: 1fr minmax($max-width, $max-width) 1fr;
@@ -46,6 +47,7 @@
 
 @media (max-width: $break-tablet) {
   .container {
+    margin-top: 10px;
     display: block;
     padding: 15px;
   }
