--- a/src/styles/_color.scss
+++ b/src/styles/_color.scss
@@ -5,8 +5,10 @@ $bg: $creamy;
 $beige: #ddd4bb;
 $gray: #adaa9b;
 $mocha: #a89984;
+$green: #98971a;
 $mos: #3f4638;
 $brown: #7c6f64;
 $orange: #d79921;
 $dark-cyan: #006a65;
+$cyan: #458588;
 $dark-red: #b1513b;
