--- a/src/styles/custom-container.scss
+++ b/src/styles/custom-container.scss
@@ -16,7 +16,8 @@
   }
 
   .remark-container__title {
-    font-size: 1.5em;
+    font-size: 1.1em;
+    font-weight: bold;
     margin-bottom: 0.5em;
   }
 }
