--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,29 +1,18 @@
-@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,700');
+@import url("https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,700");
 @import "color.scss";
 @import "math.scss";
 @import "markdown.scss";
 @import "prismjs/plugins/command-line/prism-command-line.css";
 
-$plex-mono: 'IBM Plex Mono';
+$plex-mono: "IBM Plex Mono";
 
 html,
 body {
   padding: 0;
   font-size: 1rem;
   line-height: 1.5rem;
-  font-family:
-    $plex-mono,
-    -apple-system,
-    BlinkMacSystemFont,
-    Segoe UI,
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    Fira Sans,
-    Droid Sans,
-    Helvetica Neue,
-    sans-serif;
+  font-family: $plex-mono, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -69,7 +58,7 @@ blockquote {
 
   &::before {
     font-size: 2.5em;
-    content: "\"";
+    content: '"';
     color: $gray;
     font-weight: 900;
     position: absolute;
