--- a/src/styles/prism-gruvbox.scss
+++ b/src/styles/prism-gruvbox.scss
@@ -49,7 +49,7 @@ pre[class*="language-"] {
   background: $black;
 }
 
-:not(pre) > code[class*="language-"] {
+:not(pre) > code {
   padding: 0.1em 0.3em;
   border-radius: 0.3em;
   color: #fbf1c7;
