--- a/src/pages/archives/slug.module.scss
+++ b/src/pages/archives/slug.module.scss
@@ -6,7 +6,7 @@
   margin-top: 40px;
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr minmax($max-width, $max-width) 1fr;
+  grid-template-columns: 1fr minmax($max-width, $max-width) 260px;
   grid-template-areas: "empty main sidebar";
   grid-auto-rows: max-content;
 }
