--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -37,6 +37,12 @@ img {
   margin: 0 auto;
 }
 
+article {
+  ul li::before {
+    content: "- ";
+  }
+}
+
 figure {
   figcaption {
     padding-top: 0.5em;
