--- a/src/components/archives/ArticleHeader.module.css
+++ b/src/components/archives/ArticleHeader.module.css
@@ -1,5 +1,3 @@
-@import "../../styles/color.scss";
-
 .header__container {
   padding-bottom: 10px;
   border-bottom: 1px solid;
@@ -7,7 +5,6 @@
 
 .flex {
   display: flex;
-  // align-items: center;
   justify-content: space-between;
 }
 
@@ -17,9 +14,10 @@
   font-weight: 600;
   line-height: 1.2em;
 
-  &:hover {
-    color: $orange;
-  }
+}
+
+.post__title:hover {
+  color: var(--orange);
 }
 
 .post__tags {
@@ -31,7 +29,7 @@
   .tags__icon {
     width: 1em;
     margin-right: 0.2em;
-    color: $green;
+    color: var(--green);
   }
 }
 
