--- a/src/pages/archives/slug.module.css
+++ b/src/pages/archives/slug.module.css
@@ -1,12 +1,9 @@
-@import "../../styles/config.scss";
-@import "../../styles/color.scss";
-@import "../../styles/mixin.scss";
-
 .container {
   margin-top: 40px;
   width: 100%;
+  max-width: var(--max-width);
   display: grid;
-  grid-template-columns: 1fr minmax($max-width, $max-width) 260px;
+  grid-template-columns: 1fr minmax(var(--max-width), var(--max-width)) 260px;
   grid-template-areas: "empty main sidebar";
   grid-auto-rows: max-content;
 }
@@ -24,21 +21,22 @@
 }
 
 .article {
-  color: $black;
-  background-color: $beige;
+  width: 100%;
+  color: var(--black);
+  background-color: var(--beige);
   padding: 40px;
+}
 
-  a {
-    text-decoration: underline;
+.article a {
+  text-decoration: underline;
+}
 
-    &:hover {
-      color: $orange;
-    }
-  }
+.article a:hover {
+  color: var(--orange);
+}
 
-  hr {
-    margin: 20px 0;
-  }
+.article hr {
+  margin: 20px 0;
 }
 
 .article__body {
@@ -51,7 +49,7 @@
   }
 }
 
-@media (max-width: $break-tablet) {
+@media (max-width: 900px) {
   .container {
     margin-top: 10px;
     display: block;
