--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -3,9 +3,8 @@
   max-width: var(--max-width);
   margin: 20px auto;
 
-  color: var(--black);
   display: block;
-  border-top: 1px solid var(--black);
+  border-top: 1px solid var(--border-color);
   font-size: 1rem;
   line-height: 4rem;
 }
