--- a/src/components/archives/CommitLogs.module.css
+++ b/src/components/archives/CommitLogs.module.css
@@ -3,7 +3,7 @@
   max-width: var(--max-width);
   margin: 0 auto;
 
-  color: var(--black);
+  color: var(--fg);
   background-color: var(--gray);
   margin-top: 40px;
   padding: 20px 40px;
@@ -57,8 +57,8 @@ details[open] > .summary::after {
 
 .summary:hover,
 details[open] .summary {
-  background-color: var(--mos);
-  color: var(--white);
+  background-color: var(--hover-color);
+  color: var(--bg);
 }
 
 @media (max-width: 900px) {
@@ -76,5 +76,11 @@ details[open] .summary {
         display: none;
       }
     }
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .commit_logs {
+    background-color: var(--container-color);
   }
 }
