upgrade Next.js to 15
run npx @next/codemod@canary upgrade latest

--- a/src/styles/prism-gruvbox.css
+++ b/src/styles/prism-gruvbox.css
@@ -122,7 +122,7 @@ pre[class*="language-"] {
   text-decoration: underline;
 }
 
-// git diff highlight
+/* git diff highlight */
 pre.language-git {
   .token.string {
     color: var(--code-white);
